<resources>
    <string name="app_name">Login</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_password">Change Password</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password"><u>Forgot your password?</u></string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_change">Change</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="go_to_home_page">Go to home page</string>
    <string name="welcomes_you_in_our_app"><u>Welcomes you in our APP</u></string>
    <string name="email3">Email</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_number">Enter number</string>
    <string name="email_id3">Email id</string>
    <string name="submit_form">Submit Form</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
</resources>
