<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".form">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" Personal Details"
        android:gravity="center"
        android:textSize="30sp"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:inputType="" />
        <TextView
            android:id="@+id/textView2"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/email_id3"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/editText2"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email3"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
           android:text="Pin Code"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/editText4"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Code"
            android:inputType="text"/>
        <TextView
            android:id="@+id/textView5"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/mobile_number"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/editText5"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number"
            android:inputType="number"/>

        <Button
            android:id="@+id/submitform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/submit_form"/>


    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Inverse"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="gone"/>

</LinearLayout>
