<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcomes_you_in_our_app"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />


    <EditText
        android:id="@+id/old_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="170dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="82dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="230dp"
        android:focusableInTouchMode="true"
        android:hint="@string/prompt_password"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="125dp" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="244dp"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="168dp" />

      <Button
          android:id="@+id/changePass"
          style="?android:textAppearanceSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_alignTop="@+id/remove"
          android:layout_marginEnd="52dp"
          android:background="@color/colorPrimaryDark"
          android:text="@string/btn_change"
          android:textColor="@android:color/white"
          android:textStyle="bold"
          tools:layout_editor_absoluteX="199dp"
          tools:layout_editor_absoluteY="211dp"
         />

   <ProgressBar
          android:id="@+id/progressBar"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:visibility="gone"
          tools:layout_editor_absoluteY="0dp"/>

      <Button
          android:id="@+id/remove"
          style="?android:textAppearanceSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignParentStart="true"
          android:layout_marginBottom="174dp"
          android:layout_marginStart="54dp"
          android:background="@color/colorPrimaryDark"
          android:text="@string/btn_remove"
          android:textColor="@android:color/white"
          android:textStyle="bold"
          tools:layout_editor_absoluteX="199dp"
          tools:layout_editor_absoluteY="259dp"
        />

      <Button
          android:id="@+id/change_password_button"
          style="?android:textAppearanceSmall"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="116dp"
          android:text="@string/change_password"
          android:textStyle="bold"
          tools:layout_editor_absoluteX="42dp"
          tools:layout_editor_absoluteY="312dp"
         />

      <Button
          android:id="@+id/remove_user_button"
          style="?android:textAppearanceSmall"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:layout_below="@+id/change_password_button"
          android:layout_centerHorizontal="true"

          android:layout_marginTop="-116dp"
          android:text="@string/remove_user"
          android:textStyle="bold"
          tools:layout_editor_absoluteX="42dp"
          tools:layout_editor_absoluteY="408dp" />

      <Button
          android:id="@+id/sign_out"
          style="?android:textAppearanceSmall"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="12dp"
          android:background="@color/colorPrimary"
          android:text="@string/btn_sign_out"
          android:textColor="@android:color/white"
          android:textStyle="bold"
          tools:layout_editor_absoluteX="42dp"
          tools:layout_editor_absoluteY="456dp" />

    <TextView
        android:id="@+id/useremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:hint="@string/email_id"
        android:textSize="20sp"

        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/homepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="onClick"
        android:text="@string/go_to_home_page" />

</RelativeLayout>
